--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlinVersion = '0.14.449'
+    ext.kotlinVersion = '0.1-SNAPSHOT'
 
     repositories {
         mavenCentral()
